--- a/style.css
+++ b/style.css
@@ -52,8 +52,7 @@
   margin-top: 20px;
   width: 500px;
   height: 500px;
-  background-color: burlywood;
-  position: relative;
+  position:static;
   z-index: 0;
   transition: all 6s cubic-bezier(0.25, 0.98, 0.75, 1); }
   .wheel .c--c1 {
