--- a/style.css
+++ b/style.css
@@ -26,6 +26,9 @@ h1 {
 }
 
 .box {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: xx-large;
+    text-align: center;
     width: 70px;
     height: 70px;
     background-color: lightgray;
